<?xml version="1.0" encoding="utf-8"?>
<!--main activity layout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOne"
        android:layout_width="match_parent"
        android:layout_height="146.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/good_morning_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="50.6dp"
                android:text="@string/good_morning"
                android:textAppearance="@style/good_morning_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/bigLove"
                android:layout_width="22dp"
                android:layout_height="21dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintStart_toEndOf="@id/good_morning_text"
                app:layout_constraintTop_toTopOf="@id/good_morning_text" />

            <View
                android:id="@+id/smallLove"
                android:layout_width="12dp"
                android:layout_height="11dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="@id/bigLove"
                app:layout_constraintStart_toEndOf="@id/good_morning_text" />

            <View
                android:id="@+id/mediumLove"
                android:layout_width="17dp"
                android:layout_height="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="@id/bigLove"
                app:layout_constraintStart_toEndOf="@id/good_morning_text" />

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="32dp"
                app:cardBackgroundColor="@color/round_card_color"
                app:cardCornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="7dp"
                        android:foregroundGravity="fill"
                        app:cardBackgroundColor="@color/red"
                        app:cardCornerRadius="50dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="3dp"
                            android:layout_height="6dp"
                            android:layout_gravity="center"
                            app:cardBackgroundColor="@color/white"

                            />
                    </androidx.cardview.widget.CardView>

                    <View
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/ic_baseline_notifications_24"
                        android:foregroundGravity=""
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.SearchView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/search_background"
                android:gravity="end"
                android:layoutDirection="rtl"
                android:padding="10dp"
                app:defaultQueryHint="@string/search_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/good_morning_text"
                app:queryHint="@string/search_hint" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <!--scrollView to enable scrollable content-->
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/cardViewOne"
    app:layout_constraintBottom_toTopOf="@id/bottom_layout"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.viewpager2.widget.ViewPager2>
        <TextView
            android:id="@+id/upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/upcoming_birthdays"
            android:textAppearance="@style/good_morning_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_pager_layout"
            />
<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycleViewLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/upcoming"
    />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_vector_plus"
        android:focusable="true"
        android:clickable="true"
        app:tint="@android:color/white"
        app:backgroundTint="@color/custom_purple"
        android:contentDescription="@string/fab"
        />
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/bottom_menu_item"
            >


        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>