<?xml version="1.0" encoding="utf-8"?>
<!--layout for recycler pager content-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginBottom="5dp"

    android:layout_marginTop="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/recycle_card1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:elevation="100dp"
        android:layout_marginEnd="10dp"
        android:paddingBottom="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/recycle_card_circle"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/bar"
                android:layout_width="3dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@color/custom_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="96dp"
                android:background="@drawable/ic_vector_star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.433" />

            <View
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/ic_vector_star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.373" />

            <View
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="84dp"
                android:background="@drawable/ic_vector_diamond"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.795" />

            <View
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="56dp"
                android:background="@drawable/ic_vector_diamond"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.072" />

            <View
                android:id="@+id/view"
                android:layout_width="71dp"
                android:layout_height="46dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/ic_vector_cone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="56dp"
                android:background="@drawable/ic_vector_spiral"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.301" />

            <View

                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="56dp"
                android:background="@drawable/ic_vector_star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.712" />

            <View
                android:id="@+id/view2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="76dp"
                android:background="@drawable/ic_vector_diamond"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_baseline_cake_24"
                app:layout_constraintBottom_toBottomOf="@+id/date"
                app:layout_constraintEnd_toStartOf="@+id/date"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toTopOf="@+id/date" />

            <View
                android:layout_width="22dp"
                android:layout_height="21dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_groupcalender"
                app:layout_constraintBottom_toBottomOf="@+id/date_left"
                app:layout_constraintEnd_toStartOf="@+id/date_left"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toTopOf="@+id/date_left" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:text="@string/dob"
                android:textAppearance="@style/good_morning_style_not_bold"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/date_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/dob_left"
                android:textAppearance="@style/good_morning_style_not_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/date"
                app:layout_constraintTop_toBottomOf="@id/date" />


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="19dp"
                android:text="@string/ola_micheal"
                android:textAppearance="@style/good_morning_style_unique_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/recycle_card_circle"
        android:layout_width="60dp"
        android:elevation="60dp"
        app:cardCornerRadius="50dp"
        android:layout_marginStart="10dp"
        app:cardPreventCornerOverlap="false"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/recycle_card1"
        app:layout_constraintTop_toTopOf="@id/recycle_card1"
        app:layout_constraintEnd_toStartOf="@id/recycle_card1"
        >
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/recycle_card_circle_constraint"
           />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>